src/objects/CPF_Equipment_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Product_Desc__c</fullName>
        <formula>System_Design_Product__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Astrum Product Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Name__c</fullName>
        <description>Module/Inverter Name</description>
        <inlineHelpText>Module/Inverter Name</inlineHelpText>
        <label>Equipment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Inverter/Module Manufacturer</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>CPF Equipment Mappings</relationshipLabel>
        <relationshipName>CPF_Equipment_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPF Equipment Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CPF_ID__c</columns>
        <columns>NAME</columns>
        <columns>Astrum_Product_Desc__c</columns>
        <columns>Equipment_Name__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model_Number__c</columns>
        <columns>System_Design_Product__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CEM-{00000}</displayFormat>
        <label>CPF Equipment Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPF Equipment Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>